2009-08-26  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* mkoctfile.cc.in: Fix typo.
	* octave-bug.cc.in: Correct substututions.

2009-08-24  Jaroslav Hajek  <highegg@gmail.com>

	* acx_blas_f77_func.m4: Fix typo.

2009-08-19  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2009-08-18  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_HDF5_HAS_REQUIRED_API): If test fails, set
	octave_hdf5_ok to no instead of setting HAVE_HDF5 to false.
	* configure.in: Check octave_hdf5_ok instead of HAVE_HDF5.
	Set TEXINFO_HDF5 if HDF5 library is found.

2009-08-18  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (ALL_CPPFLAGS): Add HDF5_CPPFLAGS to the list.
	* aclocal.m4 (OCTAVE_HDF5_HAS_REQUIRED_API):
	Set HAVE_HDF5 to false, not WITH_HDF5.
	* configure.in: Use OCTAVE_CHECK_LIBRARY to check for HDF5
	library.  Print HDF5_CPPFLAGS and HDF5_LDFLAGS in the summary.
	* octave-bug.in, octave-bug.cc.in, Makeconf.in: Substitute
	HDF5_CPPFLAGS and HDF5_LDFLAGS.

2009-08-18  John W. Eaton  <jwe@octave.org>

	* acx_blas_f77_func.m4 (ACX_BLAS_F77_FUNC): Save and restore LIBS.

2009-08-18  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_CHECK_LIBRARY): Use variables named
	octave_check_library_save_XXX instead of save_XXX.
	* configure.in: Add Z_LDFLAGS and Z_LIBS to LIBS, and Z_CPPFLAGS
	to CPPFLAGS in checks for curl and glpk libraries.

2009-08-18  David Grundberg  <individ@acc.umu.se>

	* aclocal.m4 (OCTAVE_CHECK_LIBRARY): Clear QHULL_LIBS etc on
	errors. Interpret --without-qhull etc correctly.

2009-08-17  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in, mkoctfile.cc.in (FFTW3_LDFLAGS, FFTW3_LIBS,
	FFTW3F_LDFLAGS, FFTW3F_LIBS): Substitute instead of FFTW_LIBS.
	(FFTW_LIBS): Define from FFTW3_LDFLAGS, FFTW3_LIBS,
	FFTW3F_LDFLAGS, and FFTW3F_LIBS variables.

	* octave-bug.cc.in, octave-bug.in (Z_CPPFLAGS, Z_LDFLAGS):
	Substitute and display them.
	(Z_LIBS): Rename from ZLIB_LIBS.
	* configure.in: Use OCTAVE_CHECK_LIBRARY to check for ZLIB.