@@ -104,6 +104,8 @@ main (int argc, char **argv)
   vars["AMD_CPPFLAGS"] = %OCTAVE_CONF_AMD_CPPFLAGS%;
   vars["AMD_LDFLAGS"] = %OCTAVE_CONF_AMD_LDFLAGS%;
   vars["AMD_LIBS"] = %OCTAVE_CONF_AMD_LIBS%;
+  vars["ARPACK_CPPFLAGS"] = %OCTAVE_CONF_ARPACK_CPPFLAGS%;
+  vars["ARPACK_LDFLAGS"] = %OCTAVE_CONF_ARPACK_LDFLAGS%;
   vars["ARPACK_LIBS"] = %OCTAVE_CONF_ARPACK_LIBS%;
   vars["BLAS_LIBS"] = %OCTAVE_CONF_BLAS_LIBS%;
   vars["CAMD_CPPFLAGS"] = %OCTAVE_CONF_CAMD_CPPFLAGS%;
