@@ -56,6 +56,8 @@ LIBS=%OCTAVE_CONF_LIBS%
 AMD_CPPFLAGS=%AMD_CPPFLAGS%
 AMD_LDFLAGS=%AMD_LDFLAGS%
 AMD_LIBS=%AMD_LIBS%
+ARPACK_CPPFLAGS=%ARPACK_CPPFLAGS%
+ARPACK_LDFLAGS=%ARPACK_LDFLAGS%
 ARPACK_LIBS=%ARPACK_LIBS%
 BLAS_LIBS=%BLAS_LIBS%
 CAMD_CPPFLAGS=%CAMD_CPPFLAGS%
