@@ -1,3 +1,12 @@
+2009-08-26  John W. Eaton  <jwe@octave.org>
+
+	* aclocal.m4 (OCTAVE_CHECK_LIBRARY): Allow empty list of header files.
+	* configure.in: Use OCTAVE_CHECK_LIBRARY to check for arpack.
+	* octave-bug.in, octave-bug.cc.in: Substitute ARPACK_CPPFLAGS and
+	ARPACK_LDFLAGS.
+	* Makeconf.in (ARPACK_CPPFLAGS, ARPACK_LDFLAGS): New variables.
+	(do-subst-config-vals): Substitute them.
+
 2009-08-26  Benjamin Lindner  <lindnerb@users.sourceforge.net>
 
 	* mkoctfile.cc.in: Fix typo.
